# regulation-translation-checking

./: AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
annotation_workspace/: README.md  app.js  index.html  requirements.txt  server.py  style.css
app/: streamlit_app.py
outputs/: ai_pairs_raw.json  chunks.json  coverage_report.csv  extracted_blocks.json  review_report.docx  reviewed_pairs.json  sectioned_blocks.json
prompts/: agent.md  analyze_bilingual_section.md  pair_bilingual_blocks.md  regulatory_check.md  select_target_regulation.md  terminology_check.md  translation_check.md
src/: __init__.py  ai_client.py  api_pairing.py  bilingual_pairer.py  bilingual_pairing.py  block_classification.py  block_cleaner.py  chinese_to_english_pairing.py  chunker.py  coverage_validator.py  document_loader.py  export_report.py  extractors.py  file_loader.py  highlight_renderer.py  layout_segmenter.py  llm_client.py  ocr_extractor.py  paragraph_api_review.py  pdf_extractor.py  pipeline.py  reference_comparison.py  regulation_checker.py  regulation_detection.py  regulation_detector.py  regulatory_checker.py  report_generator.py  schemas.py  section_ai_review.py  section_detection.py  section_parser.py  terminology_checker.py  terminology_review.py  text_extractor.py  translation_checker.py  translation_review.py  utils.py
tests/: test_ai_client_new.py  test_bilingual_pairing.py  test_coverage.py  test_document_loader.py  test_extractors.py  test_llm_client.py  test_pairer.py  test_regulation_selection.py  test_report_generator.py  test_section_ai_review.py  (+3 more)
