[project]
name = "bilingual-regulatory-checker"
version = "0.1.0"
description = "Streamlit application for bilingual Chinese-English translation and regulatory consistency review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.40",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "pytesseract>=0.3.13",
  "pillow>=10.0",
  "langdetect>=1.0.9",
  "pydantic>=2.8",
  "pandas>=2.2",
  "python-docx>=1.1",
  "rapidfuzz>=3.9",
  "openai>=1.50",
]

[project.optional-dependencies]
ocr = ["paddleocr>=2.9"]
embeddings = ["sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

